# phoenix_v2

./: .gitignore  .roomodes  CODE_REVIEW_SUMMARY.md  CONSOLIDATION_SUMMARY.md  COORDINATE_ATTENTION_ANALYSIS.md  CROSS_ANALYSIS_REPORT.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  NEGATIVE_ANALYSIS.md  PRODUCTION_ROADMAP.md  PROJECT_SUMMARY.md  PR_REFERENCES.md  README.md  REFLECTION_AND_REFINEMENT.md  VERSION_GUIDE.md  analysis_data.json  one_click_train_test.py  pyproject.toml  requirements.txt  start-v1.sh  start-v3.sh  test_phoenix_local.py  validate_implementation.py
1_projects/phoenix_mamba_v2/: KAGGLE_DEPLOY.md  TODO.md  agent_state.md  pyproject.toml  train_local.py  train_phoenix_v3_1.py
1_projects/phoenix_mamba_v2/docs/: README.md  REFLECTION_AND_REFINEMENT.md
1_projects/phoenix_mamba_v2/docs/context/: README.md  brain-tumor-context.json  llm_analysis.md
1_projects/phoenix_mamba_v2/docs/legacy/: COMPLETE_FILE_ANALYSIS.md  CONSOLIDATED_RESEARCH.md  CONTRIBUTING.md  CONVERSATION_HISTORY.md  CROSS_ANALYSIS_REPORT.md  EFFICIENT_QUANT_ANALYSIS.md  FINAL_REVIEW_AND_FIXES.md  LLM_CONTEXT.md  NEGATIVE_ANALYSIS.md  NeuroSnake_ViT_Paper.md  QUICKSTART.md  (+6 more)
1_projects/phoenix_mamba_v2/kaggle_dist/: dataset-metadata.json
1_projects/phoenix_mamba_v2/research/: INDEX.md  LOG_TEMPLATE.md  examples.py
1_projects/phoenix_mamba_v2/scripts/: run_pipeline.py
1_projects/phoenix_mamba_v2/tests/: test_explainability.py  test_model.py  test_processors_security.py  test_topology.py
1_projects/phoenix_mamba_v2/tools/: bundle_kaggle.py
(+349 files in other folders)
